tests/sumo/output/e1/errors/nextEdges_invalid/errors.sumo
Error: Unknown edge 'dummy' given as nextEdges in detector '4/1to3/1'
Quitting (on error).
